--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Fiqh</h1>
-        <p>Welcome to the Fiqh GitHub index page.</p>
-        <p>Fiqh is a repository dedicated to the study and discussion of Islamic jurisprudence.</p>
-        <div class="repo-link">
-            <a href="https://github.com/yourusername/fiqh">Visit the Repository</a>
-        </div>
+        <h1>Fasting</h1>
+        <p> Fasting the Six Days of Shawwa </p>
     </div>
 </body>
 </html>
