--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <div class="container">
+ <header>
         <h1>Fasting</h1>
         <p> Fasting the Six Days of Shawwa </p>
-    </div>
+ </header>
+        
+        
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <h2><a href="courses.html" class="index-button">COURSES</a></h2>
+       <br> <p>Explore our collection of educational resources and enhance your learning experience.</p>
+    </section>
+
+    <footer>
+	    <br> <br>
+        <p>&copy; 2023 SBH — Pubs. All rights reserved.</p>
+    </footer>
 </body>
 </html>
