--- a/index.html
+++ b/index.html
@@ -3,32 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fiqh - Islamic Jurisprudence</title>
-<link rel="stylesheet" href="style1.css">
+    <title>SHD — Pubs : Fiqh (Islamic Jurisprudence)</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
  <header>
         <h1>Fasting</h1>
-        <p> Fasting the Six Days of Shawwa </p>
- </header>
-        
-        
+        <p> Fasting the Six Days of Shawwal </p>
+ </header>   
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
     <section>
-        <h2><a href="courses.html" class="index-button">COURSES</a></h2>
-       <br> <p>Explore our collection of educational resources and enhance your learning experience.</p>
+        <h2><a href="fasting.html" class="index-button">Fasting</a></h2>
+       <br> <p> This section is about fasting </p>
     </section>
 
     <footer>
-	    <br> <br>
-        <p>&copy; 2023 SBH — Pubs. All rights reserved.</p>
+        <p>&copy; 2024 SBH — Pubs. All rights reserved.</p>
     </footer>
 </body>
 </html>
