--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHD — Pubs : Fiqh (Islamic Jurisprudence)</title>
+    <title>SBH — Pubs : Fiqh (Islamic Jurisprudence)</title>
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
  <header>
-        <h1>Fasting</h1>
-        <p> Fasting the Six Days of Shawwal </p>
+        <h1>SBH — Pubs </h1>
+        <p> Fiqh (Islamic Jurisprudence) </p>
  </header>   
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="salaf.html">The Salaf</a></li>
         </ul>
     </nav>
-
+<!--
     <section>
-        <h2><a href="fasting.html" class="index-button">Fasting</a></h2>
-       <br> <p> This section is about fasting </p>
+        <h2><a href="salafiyah.html" class="index-button">Salaf / Salafiyah</a></h2>
+       <br> <p> This section is about the Salaf and their Mathodology </p>
     </section>
-
+-->
     <footer>
         <p>&copy; 2024 SBH — Pubs. All rights reserved.</p>
     </footer>
