--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="salaf.html">The Salaf</a></li>
+            <li><a href="fasting.html">Fasting</a></li>
         </ul>
     </nav>
 <!--
